@@ -26,10 +26,11 @@ SIGNATURE
 t/Data-InfoBox-Item/01-use.t
 t/Data-InfoBox-Item/02-version.t
 t/Data-InfoBox-Item/03-new.t
-t/Data-InfoBox-Item/04-icon_url.t
+t/Data-InfoBox-Item/04-icon.t
 t/Data-InfoBox-Item/05-icon_char.t
-t/Data-InfoBox-Item/06-text.t
-t/Data-InfoBox-Item/07-uri.t
+t/Data-InfoBox-Item/06-icon_url.t
+t/Data-InfoBox-Item/07-text.t
+t/Data-InfoBox-Item/08-uri.t
 t/Data-InfoBox/01-use.t
 t/Data-InfoBox/02-version.t
 t/Data-InfoBox/03-new.t
