@@ -3,6 +3,7 @@ abstract: 'Data objects for info box.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  Data::Icon: 0
   Data::Text::Simple: 0
   English: 0
   Error::Pure::Utils: 0
